--- a/src/app/shared/footer/_footer-arrow.scss
+++ b/src/app/shared/footer/_footer-arrow.scss
@@ -25,7 +25,7 @@
   width: 0.2em;
   height: 2.6em;
   bottom: 0%;
-  right: 45%;
+  right: 48%;
   position: absolute;
   background: white;
   transition: height 0.35s;
