--- a/src/app/shared/scroll-arrow/scroll-arrow.scss
+++ b/src/app/shared/scroll-arrow/scroll-arrow.scss
@@ -66,8 +66,9 @@
     top: 50%;
     transform: translateY(-50%);
     @media (max-width: bp.$breakpoint-lg) {
-      height: 100%;
+      height: 98%;
       margin-top: 1rem;
+      left: 0%;
     }
 
     @media (max-width: bp.$breakpoint-md) {
@@ -90,7 +91,7 @@
     transform: translateY(-50%);
     @media (max-width: bp.$breakpoint-lg) {
       margin-top: 1rem;
-      height: 100%;
+      height: 98%;
       right: 0%;
     }
 
