--- a/src/styles/breakpoints.scss
+++ b/src/styles/breakpoints.scss
@@ -3,4 +3,5 @@ $breakpoint-sm: 600px;   // large phones / small tablets
 $breakpoint-md: 768px;   // tablets
 $breakpoint-m: 840px;   // small laptops
 $breakpoint-lg: 1024px;  // desktops
-$breakpoint-xl: 1440px;  // large desktops
+$breakpoint-l: 1240px;  // large desktops
+$breakpoint-xl: 1440px;  // extra large desktops
