--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -37,13 +37,10 @@ h1 {
   margin: 0;
   font-weight: 800;
   font-size: 5rem;
+  @media (max-width: bp.$breakpoint-l) {
+    font-size: 4.6rem;
+  }
   @media (max-width: bp.$breakpoint-lg) {
-    font-size: 4rem;
-  }
-  @media (max-width: bp.$breakpoint-md) {
-    font-size: 3.5rem;
-  }
-  @media (max-width: bp.$breakpoint-sm) {
     font-size: 3rem;
   }
   @media (max-width: bp.$breakpoint-xs) {
